remove all map feature
